# produtos-favoritos-api

./: .dockerignore  .env.sample  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: middlewares.py
app/api/v1/: api.py  openapi_docs.py
app/api/v1/rotas/: autenticacao_api.py  cliente_api.py  healthcheck_api.py  produto_favorito_api.py
app/core/: cache.py  config.py  logging_config.py  security.py
app/db/: models.py  session.py
app/schemas/: cliente_schema.py  paginacao_schema.py  produto_favorito_schema.py  produto_schema.py
app/services/: api_produtos_servico.py  autenticacao_servico.py  cliente_servico.py  produto_favorito_servico.py
migrations/: env.py
migrations/versions/: 513293c1cf12_cria_tabela_produto_favorito.py  7dc1340894ff_cria_tabela_para_armazenar_dados_de_.py  c2149af5890d_adiciona_exclusao_logica_a_clientes.py  db3d0e14fb9a_adiciona_campo_hash_senha_ao_cliente.py
tests/: conftest.py
tests/api/v1/: test_autenticacao_api.py  test_cliente_api.py  test_produto_favorito_api.py
tests/unit/core/: test_security.py
tests/unit/services/: test_produto_favorito_servico.py
